--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,12 @@
 version: '3'
-
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
     environment:
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+      - discovery.type=single-node
     ports:
-      - "9200:9200"
+      - 9200:9200
   kibana:
     image: docker.elastic.co/kibana/kibana:7.10.2
     ports:
-      - "5601:5601"
+      - 5601:5601
